--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -23,7 +23,7 @@
       institution: Cornell University
       year: 2019 - 2023
       description:
-        - Worked with Wen Sun
+        - Worked with Prof. Wen Sun
         - Minor in Operations Research
 
 # - title: Experience
